--- a/512x512_Diffusion_+_CLIP.ipynb
+++ b/512x512_Diffusion_+_CLIP.ipynb
@@ -626,7 +626,7 @@
         "cellView": "form"
       },
       "source": [
-        "text = \"wings of angelic fire in the darkness, trending on artstation\" #@param {type:\"string\"}\n",
+        "text = \"the cyberpunk purple noir wizard by Greg Rutkowski - ArtStation HD\" #@param {type:\"string\"}\n",
         "number_of_images = 5#@param {type: \"number\"}\n",
         "# eta = 0.5#@param {type: \"number\"}\n",
         "text_prompts = [\n",
